# jetson_backend

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  FaceDetectionModel.py  FaceRecognitionModel.py  LICENSE  README.md  main.cpp  main.py  ssdlite_mobilenetv3.py  sync.py  utils.py
data/: data.txt
embeddings_kan_06_128/[bacdxhe170633] bacdxhe170633/: Down-1745317496625.json  Down-1745317496993.json  Down-1745317497373.json  Down-1745317497755.json  Down-1745317498498.json  Down-1745317498897.json  Down-1745317499286.json  Down-1745317499295.json  Down-1745317499297.json  Down-1745317499321.json  Down-1745317499322.json  Left-1745317468971.json  Left-1745317469372.json  Left-1745317469777.json  Left-1745317470165.json  Left-1745317470561.json  Left-1745317470955.json  Left-1745317471351.json  Left-1745317471740.json  Left-1745317472139.json  Left-1745317472529.json  Left-1745317472924.json  Left-1745317473311.json  Right-1745317475621.json  Right-1745317476011.json  Right-1745317476388.json  Right-1745317476766.json  Right-1745317477154.json  Right-1745317477533.json  Right-1745317477941.json  Right-1745317478331.json  Right-1745317478725.json  Right-1745317479103.json  Right-1745317479493.json  Right-1745317479872.json  Straight-1745317462537.json  Straight-1745317462947.json  Straight-1745317463360.json  Straight-1745317463802.json  Straight-1745317464597.json  (+18 more)
embeddings_kan_06_128/[ngoctp] ngoctp/: Down-1745338613147.json  Down-1745338613581.json  Down-1745338614097.json  Down-1745338614504.json  Down-1745338614927.json  Left-1745338599501.json  Left-1745338599890.json  Left-1745338600314.json  Left-1745338601897.json  Left-1745338603931.json  Right-1745338605147.json  Right-1745338605711.json  Right-1745338606099.json  Right-1745338606917.json  Right-1745338607544.json  Straight-1745338594544.json  Straight-1745338595160.json  Straight-1745338595740.json  Straight-1745338596315.json  Straight-1745338596767.json  Up-1745338609316.json  Up-1745338609895.json  Up-1745338610357.json  Up-1745338610926.json  Up-1745338611511.json  main.json
embeddings_kan_06_128/[thainq] thainq/: Down-1745318539883.json  Down-1745318540276.json  Down-1745318540672.json  Down-1745318541065.json  Down-1745318541482.json  Left-1745318532261.json  Left-1745318532638.json  Left-1745318533035.json  Left-1745318533444.json  Left-1745318533837.json  Right-1745318535073.json  Right-1745318535456.json  Right-1745318535842.json  Right-1745318536241.json  Right-1745318536647.json  Straight-1745318530648.json  Straight-1745318531028.json  Straight-1745318531434.json  Straight-1745318531837.json  Up-1745318537478.json  Up-1745318537860.json  Up-1745318538249.json  Up-1745318538659.json  Up-1745318539058.json  main.json
embeddings_kan_06_512/[bacdxhe170633] bacdxhe170633/: Down-1745317496625.json  Down-1745317496993.json  Down-1745317497373.json  Down-1745317497755.json  Down-1745317498498.json  Down-1745317498897.json  Down-1745317499286.json  Down-1745317499295.json  Down-1745317499297.json  Down-1745317499321.json  Down-1745317499322.json  Left-1745317468971.json  Left-1745317469372.json  Left-1745317469777.json  Left-1745317470165.json  Left-1745317470561.json  Left-1745317470955.json  Left-1745317471351.json  Left-1745317471740.json  Left-1745317472139.json  Left-1745317472529.json  Left-1745317472924.json  Left-1745317473311.json  Right-1745317475621.json  Right-1745317476011.json  Right-1745317476388.json  Right-1745317476766.json  Right-1745317477154.json  Right-1745317477533.json  Right-1745317477941.json  Right-1745317478331.json  Right-1745317478725.json  Right-1745317479103.json  Right-1745317479493.json  Right-1745317479872.json  Straight-1745317462537.json  Straight-1745317462947.json  Straight-1745317463360.json  Straight-1745317463802.json  Straight-1745317464597.json  (+18 more)
embeddings_kan_06_512/[ngoctp] ngoctp/: Down-1745338613147.json  Down-1745338613581.json  Down-1745338614097.json  Down-1745338614504.json  Down-1745338614927.json  Left-1745338599501.json  Left-1745338599890.json  Left-1745338600314.json  Left-1745338601897.json  Left-1745338603931.json  Right-1745338605147.json  Right-1745338605711.json  Right-1745338606099.json  Right-1745338606917.json  Right-1745338607544.json  Straight-1745338594544.json  Straight-1745338595160.json  Straight-1745338595740.json  Straight-1745338596315.json  Straight-1745338596767.json  Up-1745338609316.json  Up-1745338609895.json  Up-1745338610357.json  Up-1745338610926.json  Up-1745338611511.json  main.json
embeddings_kan_06_512/[thainq] thainq/: Down-1745318539883.json  Down-1745318540276.json  Down-1745318540672.json  Down-1745318541065.json  Down-1745318541482.json  Left-1745318532261.json  Left-1745318532638.json  Left-1745318533035.json  (+17 more)
include/: camera.h  cli.h  detector.h  embedding_loader.h  extractor.h  logging.h  model.h  preprocessor.h  utils.h  vectordb.h
python/: inference.py  kan_test.py  onnx_test.py  send_log.py  sync.py  torch2trt_test.py
scripts/: convert_to_trt.py  onnx_test.py  run-clang-tidy.py
src/: CMakeLists.txt  camera.cpp  cli.cpp  detection_with_caffee.cpp  detector.cpp  embedding_loader.cpp  extractor.cpp  logger.cpp  main.cpp  model.cpp  preprocessor.cpp  utils.cpp  vectordb.cpp
src/detecting/: CMakeLists.txt  detector.cpp
src/extracting/: CMakeLists.txt  extractor.cpp
src/searching/: CMakeLists.txt  logger.cpp  vectordb.cpp
src/utils/: camera.cpp  cli.cpp  preprocessor.cpp  utils.cpp
test/: README.MD  Straight-1744807079700.jpg.json  compare_embeddings.py  detection_with_caffee.cpp  face_embedding_new.json  main.py  requirements.txt  server_embed.json  test_emmbedding.py  test_load_detector.cpp  using_haarcascade.cpp
test/faiss/: CMakeLists.txt  test_faiss.cpp
test/kanface/: CMakeLists.txt  test_kanface.cpp
test/opencv/: CMakeLists.txt  test_opencv.cpp
test/ssdlite/: CMakeLists.txt  test_ssdlite.cpp  test_ssdlite.py
tests/: detection_with_caffee.cpp  test_load_detector.cpp  using_haarcascade.cpp
toolchains/: aarch64_toolchain.cmake
(+134 files in other folders)
